--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,6 +1,7 @@
 @import './container/container';
 @import './reg-form/reg-form';
 @import './spinner/spinner';
+@import './radio/radio';
 @import './thumbler/thumbler';
 @import './nav/nav';
 @import './menu-toggle/menu-toggle';
