--- a/src/pages/recruter-search-candidate.hbs
+++ b/src/pages/recruter-search-candidate.hbs
@@ -72,7 +72,7 @@
                                     <div class="base__subtitle more-applicants__title">Cхожi кандидати:</div>
                                     <div class="more-applicants__wrap">
                                         <div class="more-applicants__slides">
-                                        <a href="#" class="slide fraimed-container">
+                                        <a href="recruter-search-candidate.html" class="slide fraimed-container">
                                             <div class="slide__position">Python Developer</div>
                                             <div class="vacancy__location slide__location">Київ</div>
                                             <div class="slide__last-line">
@@ -82,7 +82,7 @@
                                                 </div>
                                             </div>
                                         </a>
-                                        <a href="#" class="slide fraimed-container">
+                                        <a href="recruter-search-candidate.html" class="slide fraimed-container">
                                             <div class="slide__position">Python Developer</div>
                                             <div class="vacancy__location slide__location">Одесса</div>
                                             <div class="slide__last-line">
@@ -92,7 +92,7 @@
                                                 </div>
                                             </div>
                                         </a>
-                                        <a href="#" class="slide fraimed-container">
+                                        <a href="recruter-search-candidate.html" class="slide fraimed-container">
                                             <div class="slide__position">Python Developer</div>
                                             <div class="vacancy__location slide__location">Івано-Франківськ</div>
                                             <div class="slide__last-line">
@@ -102,15 +102,15 @@
                                                 </div>
                                             </div>
                                         </a>
-                                        <a href="#" class="slide fraimed-container">
-                                        <div class="slide__position">Python Developer</div>
-                                        <div class="vacancy__location slide__location">Житомир</div>
-                                        <div class="slide__last-line">
-                                        <div class="slide__salary">2200$</div>
-                                        <div class="slide__more-info">
-                                        <img src="./images/more-info_gray.png" alt="">
-                                        </div>
-                                        </div>
+                                        <a href="recruter-search-candidate.html" class="slide fraimed-container">
+                                            <div class="slide__position">Python Developer</div>
+                                            <div class="vacancy__location slide__location">Житомир</div>
+                                            <div class="slide__last-line">
+                                                <div class="slide__salary">2200$</div>
+                                                <div class="slide__more-info">
+                                                    <img src="./images/more-info_gray.png" alt="">
+                                                </div>
+                                            </div>
                                         </a>
                                     </div>
                                     </div>
