--- a/src/pages/recruter-search-candidates-list.hbs
+++ b/src/pages/recruter-search-candidates-list.hbs
@@ -23,7 +23,7 @@
                                     <div class="candidate">
                                         <div class="candidate__first-line">
                                             <div class="candidate__name-rating">
-                                                <a href="#" class="base__title candidate__name">Python Developer</a>
+                                                <a href="recruter-search-candidate.html" class="base__title candidate__name">Python Developer</a>
                                                 <div class="candidate__rating">
                                                     {{> icon iconName="star_filled" classNames="star" }}
                                                 </div>
@@ -88,7 +88,7 @@
                                     <div class="candidate">
                                         <div class="candidate__first-line">
                                             <div class="candidate__name-rating">
-                                                <a href="#" class="base__title candidate__name">Python Developer</a>
+                                                <a href="recruter-search-candidate.html" class="base__title candidate__name">Python Developer</a>
                                                 <div class="candidate__rating">
                                                     {{> icon iconName="star_filled" classNames="star" }}
                                                 </div>
@@ -153,7 +153,7 @@
                                     <div class="candidate">
                                         <div class="candidate__first-line">
                                             <div class="candidate__name-rating">
-                                                <a href="#" class="base__title candidate__name">Python Developer</a>
+                                                <a href="recruter-search-candidate.html" class="base__title candidate__name">Python Developer</a>
                                                 <div class="candidate__rating">
                                                     {{> icon iconName="star_filled" classNames="star" }}
                                                 </div>
