--- a/src/components/search-form/search-form.scss
+++ b/src/components/search-form/search-form.scss
@@ -14,7 +14,7 @@
     border-radius: 2px 0 0 2px;
     width: 100%;
     height: 100%;
-    padding: 0 20px 0 43px;
+    padding: 5px 20px 5px 43px;
     font-weight: normal;
     font-size: 16px;
     line-height: 1.4;
