--- a/src/components/thumbler/thumbler.scss
+++ b/src/components/thumbler/thumbler.scss
@@ -1,50 +1,77 @@
-.cmn-toggle {
-  position: absolute;
-  margin-left: -9999px;
-  visibility: hidden;
-}
-.cmn-toggle + label {
-  display: block;
-  position: relative;
-  cursor: pointer;
-  outline: none;
-  user-select: none;
-}
+.thumbler {
 
-input.cmn-toggle-round + label {
-  padding: 2px;
-  width: 34px;
-  height: 18px;
-  background-color: $lightgray;
-  border-radius: 17px;
-}
-input.cmn-toggle-round + label:before,
-input.cmn-toggle-round + label:after {
-  display: block;
-  position: absolute;
-  top: 1px;
-  left: 1px;
-  bottom: 1px;
-  content: "";
-}
-input.cmn-toggle-round + label:before {
-  right: 1px;
-  background-color: #f1f1f1;
-  border-radius: 17px;
-  transition: background 0.4s;
-}
-input.cmn-toggle-round + label:after {
-  width: 14px;
-  height: 14px;
-  background-color: #5B5CEE;
-  border-radius: 100%;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.04), 0 2px 6px rgba(91, 92, 238, 0.12), 0 10px 20px rgba(91, 92, 238, 0.18);
-  transition: margin 0.4s;
-  margin: 1px;
-}
-input.cmn-toggle-round:checked + label:before {
-  background-color: #CFD3FE;
-}
-input.cmn-toggle-round:checked + label:after {
-  margin-left: 17px;
+  &__toggle {
+    display: none;
+
+    & + label {
+      display: block;
+      position: relative;
+      cursor: pointer;
+      outline: none;
+      user-select: none;
+      color: $lightgray;
+    }
+
+    &-round {
+      & + label {
+        padding: 2px;
+        width: 34px;
+        height: 18px;
+        background-color: $lightgray;
+        border-radius: 17px;
+
+        &:before {
+          display: block;
+          position: absolute;
+          top: 1px;
+          left: 1px;
+          bottom: 1px;
+          content: "";
+          right: 1px;
+          background-color: #f1f1f1;
+          border-radius: 17px;
+          transition: background 0.4s;
+        }
+
+        &:after {
+          display: block;
+          position: absolute;
+          top: 1px;
+          left: 1px;
+          bottom: 1px;
+          content: "";
+          width: 14px;
+          height: 14px;
+          background-color: $lightgray;
+          border-radius: 100%;
+          box-shadow: 0 0 1px rgba(0, 0, 0, 0.04), 0 2px 6px rgba(91, 92, 238, 0.12), 0 10px 20px rgba(91, 92, 238, 0.18);
+          transition: margin 0.4s;
+          margin: 1px;
+        }
+      }
+
+      &:checked {
+
+        & + label {
+          color: $black;
+
+          &:before {
+            background-color: #CFD3FE;
+          }
+
+          &:after {
+            background-color: $blue;
+            margin-left: 17px;
+          }
+        }
+      }
+    }
+  }
+
+  &__title {
+    display: block;
+    margin-left: 40px;
+    margin-top: -3px;
+    white-space: nowrap;
+  }
 }
