--- a/src/pages/recruter-dashboard.hbs
+++ b/src/pages/recruter-dashboard.hbs
@@ -97,7 +97,10 @@
                                 <div class="vacancy__location">Київ</div>
                             </div>
                             <div class="vacancy__thumbler">
-                                {{> thumbler }}
+                                <div class="thumbler">
+                                    <input id="toggle1" class="thumbler__toggle thumbler__toggle-round" type="checkbox">
+                                    <label for="toggle1"></label>
+                                </div>
                             </div>
                         </div>
                         <div class="vacancy__line-third">
