--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -8,6 +8,7 @@
 @import './social-media/social-media';
 @import './fraimed-container/fraimed-container';
 @import './rangeslider/rangeslider';
+@import './salary-filter/salary-filter';
 @import './filters/filters';
 @import './main-menu/main-menu';
 @import './the-button/the-button';
