--- a/src/components/search-form/search-form.hbs
+++ b/src/components/search-form/search-form.hbs
@@ -1,7 +1,7 @@
 <form action="" class="search-form">
     <div class="search-form__find">
-        <div class="search-form__input-wrap">
-            <input name="prof" type="text" placeholder="Вкажіть ключові слова для пошуку" class="search-form__input">
+        <div class="search-form__search-wrap">
+            <input name="prof" type="search" placeholder="Вкажіть ключові слова для пошуку" class="search-form__search">
         </div>
         <button class="the-button search-form__button">Шукати</button>
     </div>
