--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -7,6 +7,7 @@
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 1 <a href="./recruter-dashboard.html">Dashboard рекрутера</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 2 <a href="./recruter-search-candidate.html">Рекрутер дивиться профайл кандидата</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 3 <a href="./recruter-search-candidates-list.html">Рекрутер дивиться список кандидатiв</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 4 <a href="./recruitment-list.html">Рекрутер: список наймiв</a></li>
             </ol>
         </div>
     </div>
