--- a/src/components/search-form/search-form.scss
+++ b/src/components/search-form/search-form.scss
@@ -8,7 +8,7 @@
     }
   }
 
-  &__input {
+  &__search {
     border: 1px solid #9090AB;
     box-sizing: border-box;
     border-radius: 2px 0 0 2px;
@@ -21,10 +21,20 @@
     letter-spacing: 0.05em;
     color: $black;
 
+    ::placeholder{
+      font: 400 16px/19px 'Inter', sans-serif;
+      color: #A9A9CA;
+      letter-spacing: 0.05em;
+
+      @media(max-width: 767px) {
+        line-height: 1.5;
+      }
+    }
+
     @media(max-width: 575px) {
       padding: 0 20px;
     }
-    
+
     &-wrap {
       position: relative;
       width: 100%;
@@ -91,31 +101,37 @@
     }
 
     &-left {
+      display: flex;
+
       @media(max-width: 767px) {
         margin-bottom: 10px;
       }
+    }
+
+    &-right {
+      display: flex;
     }
   }
 
   &__select {
     background-color: #fff;
-    line-height: 2;
     border: transparent;
     font-weight: 400;
     color: $blue;
-    margin: 0 19px 0 -7px;
-    max-width: 155px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    width: 100%;
+    margin: 0 19px 0 0;
+    max-width: 155px;
 
-    @media(max-width: 479px) {
-      width: 100px;
-    }
+      @media(max-width: 479px) {
+        width: 100px;
+      }
 
-    @media(max-width: 1099px) {
-      margin: 0 10px;
-    }
+      @media(max-width: 1099px) {
+        margin: 0 10px;
+      }
   }
 
   &__tags {
