--- a/src/components/thumbler/thumbler.scss
+++ b/src/components/thumbler/thumbler.scss
@@ -1,4 +1,5 @@
 .thumbler {
+  display: flex;
 
   &__toggle {
     display: none;
@@ -70,7 +71,7 @@
 
   &__title {
     display: block;
-    margin-left: 40px;
+    padding-left: 40px;
     margin-top: -3px;
     white-space: nowrap;
   }
